NEW: Removed more unused code

--- a/frontend/calculator.html
+++ b/frontend/calculator.html
@@ -51,6 +51,7 @@
     </div>
 
     <script>
+      const SKIP_FULLSCREEN = 0;
       let socket = undefined;
       let clock;
       let time_delta;
